# torque-fix

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/models/: chat.py  diagnosis.py  vehicle.py
apps/api/app/prompts/: assistant_prompt.py  diagnosis_prompt.py
apps/api/app/routers/: chat.py  diagnosis.py
apps/api/app/services/: claude_service.py
apps/api/tests/: conftest.py  test_claude_service.py  test_models.py  test_prompts.py  test_routers.py
