[project]
name = "torquefix-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "anthropic==0.40.0",
  "pydantic==2.10.0",
  "pydantic-settings==2.7.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.8.6",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
